# BoxBoxBox

./: Dockerfile.frontend  README.md  deploy.sh  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
.cursor/rules/: animation-standards.mdc  production-ready.mdc  python-backend.mdc  python-rule.mdc  senna-tribute.mdc
.rules/: rules.txt
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: auth.py  circuits.py  drivers.py  races.py  teams.py  telemetry.py  users.py  websockets.py
backend/app/core/: config.py  dependencies.py  logger.py  security.py
backend/app/db/: models.py  session.py
backend/app/schemas/: telemetry.py  token.py  user.py
backend/app/services/: telemetry_service.py  user_service.py
backend/tests/: conftest.py  test_auth.py
k8s/: backend-deployment.yaml  config.yaml  database.yaml  frontend-deployment.yaml  ingress.yaml
public/models/: README.md  placeholder.txt
public/sounds/: README.md  placeholder.txt
rag-pipeline/: index_documents.py
src/: App.tsx  index.css  react-types.d.ts
src/components/: AIRaceEngineer.tsx  CarVisualization.tsx  CursorTrail.tsx  F1Logo.tsx  HelmetModel.tsx  LiveTiming.tsx  LoadingScreen.tsx  Navigation.tsx  ParallaxContainer.tsx  ParticleEffects.tsx  RacingButton.tsx  RacingProgressBar.tsx  RealTimeAnalytics.tsx  TelemetryChart.tsx  TelemetryDisplay.tsx  WeatherWidget.tsx
src/context/: LoadingContext.tsx  TelemetryContext.tsx
src/hooks/: useRealTimeData.ts
src/pages/: AIAssistant.tsx  Dashboard.tsx  Glossary.tsx  Home.tsx  (+2 more)
(+4 files in other folders)
